# scratch

./: Makefile  dsg.sh  gdb.txt  main.cpp  scratch.sh
cmakecpp/: .gitignore  CMakeLists.txt  mkclang.sh  test.bat
cmakecpp/src/: CMakeLists.txt  file.cc  file.hh  main.cc
cmakecpp/test/: CMakeLists.txt  test.cc
cpp/: Makefile
src/: main.cpp
